Added saving list of words and list of bookmarks to android internal sandbox memory. Add ability to serfing Internet throught browser. Added ability to add bookmarks. Parser now works, can parse text files(but not tested on big files. Some other changes. Added logic classes